require dob and id attachments in checkout

--- a/i18n/de_DE.csv
+++ b/i18n/de_DE.csv
@@ -1,2 +1,19 @@
 "Enter","Eingeben"
 "Cancel","Stornieren"
+"Age Verification","Altersüberprüfung"
+"You need to confirm your age before purchase our products!","Sie müssen Ihr Alter bestätigen, bevor Sie unsere Produkte kaufen!"
+"Date of Birth","Geburtsdatum"
+"Identity Attach Files","Identitäts-Anhängedateien"
+"Drag or Select your files here","Ziehen Sie Ihre Dateien hierher oder wählen Sie sie aus"
+"Remove Item","Gegenstand entfernen"
+"Invalid File Type","Ungültiger Dateityp"
+"Size of the file is greather than allowed","Die Größe der Datei ist größer als zulässig"
+"You have reached the limit of files","Sie haben die maximale Anzahl an Dateien erreicht"
+"Invalid Request Params","Ungültige Anforderungsparameter"
+"Invalid Hash Params","Ungültige Hash-Parameter"
+"Can't find a attachment to preview.","Ich kann keinen Anhang zur Vorschau finden."
+"Oops! It seems you're not old enough to buy our products. Please check your age again.","Hoppla! Offenbar sind Sie nicht alt genug, um unsere Produkte zu kaufen. Bitte überprüfen Sie noch einmal Ihr Alter."
+"Cart doesn't contain products.","Der Warenkorb enthält keine Produkte."
+"Not valid Date of Birth.","Ungültiges Geburtsdatum."
+"Please check Age Verification information again!","Bitte überprüfen Sie die Informationen zur Altersverifizierung noch einmal!"
+"Please enter a valid date (dd.mm.yyyy).","Bitte geben Sie ein gültiges Datum an (dd.mm.yyyy)."
