update av id card

--- a/i18n/de_DE.csv
+++ b/i18n/de_DE.csv
@@ -17,3 +17,21 @@
 "Not valid Date of Birth.","Ungültiges Geburtsdatum."
 "Please check Age Verification information again!","Bitte überprüfen Sie die Informationen zur Altersverifizierung noch einmal!"
 "Please enter a valid date (dd.mm.yyyy).","Bitte geben Sie ein gültiges Datum an (dd.mm.yyyy)."
+"Please check your input.","Bitte prüfen Sie Ihre Eingabe"
+"All international passports worldwide except Germany.","Alle internationale Reisepässe weltweit ausser Deutschland."
+"Identity document for Europe or worldwide in ID3 format except Germany.","Ausweisdokument Europa oder Weltweit im ID3-Format ausser Deutschland."
+"I agree that my personal data will be transmitted to SCHUFA (SCHUFA Holding AG, Kormoranweg 5, 65201 Wiesbaden) for the purpose of identity verification and that SCHUFA will then determine the degree of correspondence between the personal data stored by it and the personal data I have provided in percentage values and If necessary, a reference to an ID-based identification check carried out at SCHUFA or another business partner will be sent back to Intrade Concepts GmbH. Intrade Concepts GmbH can therefore use the transmitted match rates to determine whether a person is stored in the SCHUFA database at the address I have provided.There will be no further data exchange or transmission of different addresses or my data will be stored in the SCHUFA database instead.For reasons of proof, only the fact that the address was verified is stored at SCHUFA.","Ich willige ein, dass meine persönlichen Daten zum Zwecke der Identitätsprüfung an die SCHUFA (SCHUFA Holding AG, Kormoranweg 5, 65201 Wiesbaden) übermittelt werden und die SCHUFA daraufhin den Grad der Übereinstimmung der bei ihr gespeicherten Personalien mit den von mir angegebenen Personalien in Prozentwerten sowie ggf. einen Hinweis auf eine zurückliegend bei der SCHUFA oder einem anderen Geschäftspartner durchgeführte ausweisgestützte Legitimationsprüfung an Intrade Concepts GmbH zurück übermittelt. Intrade Concepts GmbH kann somit anhand der übermittelten Übereinstimmungsraten erkennen, ob eine Person unter der von mir angegebenen Anschrift im Datenbestand der SCHUFA gespeichert ist. Ein weiterer Datenaustausch oder eine Übermittlung abweichender Anschriften sowie eine Speicherung meiner Daten im SCHUFA Datenbestand findet nicht statt. Es wird aus Nachweisgründen allein die Tatsache der Überprüfung der Adresse bei der SCHUFA gespeichert."
+"Age Verification with the","Altersprüfung mit dem"
+"ID Card","Personalausweis"
+"old","alten"
+"new","neuen"
+"Age Verification with","Altersprüfung mit"
+"German Passport","Deutschen Reisepass"
+"eResidence Permit","eAufenthaltstitel"
+"Austrian Identity Card","Österreichischen Personalausweis"
+"International Passport","internationalen Reisepass"
+"International Identity Card","internationalen Personalausweis"
+"Age Verification via Schufa connection","Altersprüfung über Schufa-Anbindung"
+"No credit check","Keine Bonitätsprüfung"
+"ID Number Verify","ID-Nummer überprüfen"
+"Please accept SCHUFA condition.","Bitte akzeptieren Sie den SCHUFA-Zustand."
